force-app/main/default/objects/CMAP_ProcessQueue__c/CMAP_ProcessQueue__c.object-meta.xml
<CustomObject>
    <description>Custom Object To Capture Lead Share for Lead Super User.</description>
    <label>CMAP_ProcessQueue</label>
    <nameField>
        <label>CMAP_ProcessQueue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMAP_ProcessQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>