force-app/main/default/objects/CMAP_ProcessQueue__c/fields/Channel_Lead__c.field-meta.xml
<CustomField>
    <fullName>Channel_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CMAP_ProcessQueues</relationshipLabel>
    <relationshipName>CMAP_ProcessQueues</relationshipName>
    <type>Lookup</type>
</CustomField>