force-app/main/default/objects/CMAP_ProcessQueue__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>GroupId</label>
    <type>TextArea</type>
</CustomField>