force-app/main/default/objects/CMAP_ProcessQueue__c/fields/Mass_Lead_Upload_Request__c.field-meta.xml
<CustomField>
    <fullName>Mass_Lead_Upload_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mass Lead Upload Request</label>
    <referenceTo>Mass_Upload_Lead_Request__c</referenceTo>
    <relationshipLabel>CMAP_ProcessQueues</relationshipLabel>
    <relationshipName>CMAP_ProcessQueues</relationshipName>
    <type>Lookup</type>
</CustomField>