force-app/main/default/objects/CMAP_ProcessQueue__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CMAP_ProcessQueues</relationshipLabel>
    <relationshipName>CMAP_ProcessQueues</relationshipName>
    <type>Lookup</type>
</CustomField>