force-app/main/default/objects/CMAP_ProcessQueue__c/fields/Super_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Super_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CMAP_ProcessQueues</relationshipName>
    <type>Lookup</type>
</CustomField>