force-app/main/default/objects/CMAP_ProcessQueue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
            <value>
                <fullName>Group Member</fullName>
            </value>
            <value>
                <fullName>TeamGroup</fullName>
            </value>
            <value>
                <fullName>TeamShare</fullName>
            </value>
            <value>
                <fullName>MLUR Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>